--- a/beauty-zone/index.html
+++ b/beauty-zone/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Beauty Zone</title>
+    <!-- Підключення CSS -->
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <header>
@@ -12,10 +14,14 @@
           <img src="./Images/logo.svg" alt="Логотип Beauty Zone" />
         </a>
         <ul>
-          <li><a href="#beauty-zone-about-section">Про нас</a></li>
-          <li><a href="#why-us-section">Чому ми</a></li>
-          <li><a href="#our-procedures">Наші процедури</a></li>
-          <li><a href="#how-to-find-us">Контакти</a></li>
+          <li>
+            <a class="header-link" href="#beauty-zone-about-section">Про нас</a>
+          </li>
+          <li><a class="header-link" href="#why-us-section">Чому ми</a></li>
+          <li>
+            <a class="header-link" href="#our-procedures">Наші процедури</a>
+          </li>
+          <li><a class="header-link" href="#how-to-find-us">Контакти</a></li>
           <li>
             <a href="#">
               <!-- call icon -->
@@ -38,12 +44,14 @@
     <main>
       <section>
         <p>Косметологічна клініка</p>
-        <h1 style="color: #2b7fff">beauty zone</h1>
+        <h1 class="hero-title">beauty zone</h1>
         <button class="button" type="button">Замовити дзвінок</button>
         <p>Запишись та отримай безкоштовну консультацію нашого косметолога</p>
       </section>
       <section id="beauty-zone-about-section">
-        <h2>Перевтілюйтесь в <span>beauty zone!</span></h2>
+        <h2 class="section-title">
+          Перевтілюйтесь в <span class="accent">beauty zone!</span>
+        </h2>
         <p>
           Наша косметологічна клініка пропонує вам професійні послуги з догляду
           за шкірою обличчя та тіла.
@@ -57,8 +65,10 @@
         <img src="./Images/Mask-group2.jpg" alt="women-face-arrow-up" />
       </section>
       <section id="why-us-section">
-        <h2>Чому люди <span>обирають нас</span></h2>
-        <ul>
+        <h2 class="section-title">
+          Чому люди <span class="accent">обирають нас</span>
+        </h2>
+        <ul class="advantages">
           <li>
             <article>
               <p>
@@ -86,7 +96,9 @@
         </ul>
       </section>
       <section id="our-procedures">
-        <h2>Наші <span>процедури</span></h2>
+        <h2 class="section-title">
+          Наші <span class="accent">процедури</span>
+        </h2>
         <h3>Маски для обличчя</h3>
         <img src="./Images/procedures.1.jpg" alt="women-face-with-mask" />
         <h3>Ін'єкції для обличчя</h3>
@@ -95,7 +107,7 @@
         <img src="./Images/procedures.3.jpg" alt="women-face-relax-procedure" />
       </section>
       <section id="how-to-find-us">
-        <h2>Як нас <span>знайти</span></h2>
+        <h2 class="section-title">Як нас <span class="accent">знайти</span></h2>
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.4785329845026!2d30.520326599999994!3d50.4508131!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce50853c3c51%3A0x6703d85b0d10b524!2z0L_RgNC-0LLRg9C70L7QuiDQotCw0YDQsNGB0LAg0KjQtdCy0YfQtdC90LrQsCwgNSwg0JrQuNGX0LIsINCj0LrRgNCw0ZfQvdCwLCAwMjAwMA!5e0!3m2!1suk!2sde!4v1716143031751!5m2!1suk!2sde"
           width="605"
@@ -115,10 +127,14 @@
           <!-- logo-->
         </a>
         <ul>
-          <li><a href="#beauty-zone-about-section">Про нас</a></li>
-          <li><a href="#why-us-section">Чому ми</a></li>
-          <li><a href="#our-procedures">Наші процедури</a></li>
-          <li><a href="#how-to-find-us">Контакти</a></li>
+          <li>
+            <a class="footer-link" href="#beauty-zone-about-section">Про нас</a>
+          </li>
+          <li><a class="footer-link" href="#why-us-section">Чому ми</a></li>
+          <li>
+            <a class="footer-link" href="#our-procedures">Наші процедури</a>
+          </li>
+          <li><a class="footer-link" href="#how-to-find-us">Контакти</a></li>
         </ul>
       </nav>
       <address>
