was not able to upload typos

--- a/beauty-zone/index.html
+++ b/beauty-zone/index.html
@@ -57,9 +57,10 @@
           за шкірою обличчя та тіла.
         </p>
         <p>
-          B <span>beauty zone</span> ми гарантуємо найвищі стандарти якості та
-          приємний сервіс. Наші косметологічні процедури та препарати допоможуть
-          вам підтримувати свою красу та молодість. З нами краса назавжди!
+          B <strong>Beauty Zone</strong> ми гарантуємо найвищі стандарти якості
+          та приємний сервіс. Наші косметологічні процедури та препарати
+          допоможуть вам підтримувати свою красу та молодість. З нами краса
+          назавжди!
         </p>
         <img src="./Images/Mask-group1.jpg" alt="women-face-arrow-down" />
         <img src="./Images/Mask-group2.jpg" alt="women-face-arrow-up" />
