--- a/Homework-1/beauty-zone/index.html
+++ b/Homework-1/beauty-zone/index.html
@@ -45,13 +45,15 @@
         <p>Косметологічна клініка</p>
         <h1 class="hero-title">beauty zone</h1>
         <button class="button" type="button">Замовити дзвінок</button>
-        <p>Запишись та отримай безкоштовну консультацію нашого косметолога</p>
+        <p class="call-to-action">
+          Запишись та отримай безкоштовну консультацію нашого косметолога
+        </p>
       </section>
       <section id="beauty-zone-about-section">
         <h2 class="section-title">
           Перевтілюйтесь в <span class="accent">beauty zone!</span>
         </h2>
-        <p>
+        <p class="beauty-zone-about-text">
           Наша косметологічна клініка пропонує вам професійні послуги з догляду
           за шкірою обличчя та тіла.
         </p>
@@ -140,13 +142,20 @@
       <address>
         <ul>
           <li>
-            <a href="tel:+380960000007">+ 38 (096) 000 00 07</a>
+            <a class="footer-link" href="tel:+380960000007"
+              >+ 38 (096) 000 00 07</a
+            >
           </li>
           <li>
-            <a href="mailto:beautyzone@gmail.com">beautyzone@gmail.com</a>
+            <a class="footer-link" href="mailto:beautyzone@gmail.com"
+              >beautyzone@gmail.com</a
+            >
           </li>
           <li>
-            <a href="https://maps.app.goo.gl/PRrRkmLzZJUjbbKMA" target="_blank"
+            <a
+              class="footer-link"
+              href="https://maps.app.goo.gl/PRrRkmLzZJUjbbKMA"
+              target="_blank"
               >Україна, м. Київ, вул. Тараса Шевченка 5</a
             >
           </li>
@@ -166,8 +175,10 @@
             </a>
           </li>
         </ul>
-        <a href="#" target="_blank">Політика конфіденційності</a>
-        <p>© 2022 Дані захищені</p>
+        <a class="footer-link" href="#" target="_blank"
+          >Політика конфіденційності</a
+        >
+        <p class="Data-safety">© 2022 Дані захищені</p>
       </address>
       <img
         src="./Images/pexels-photo-8101532-PhotoRoom1.jpg"
