--- a/Bakery/index.html
+++ b/Bakery/index.html
@@ -20,22 +20,30 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
+    <header class="header">
       <div class="container">
-        <nav>
-          <a href="/">
-            <img src="./pictures/logo.svg" alt="Логотип сучасної пекарні" />
-          </a>
-          <ul>
-            <li>
-              <a class="link" href="#traditions-section">Наші традиції</a>
-            </li>
-            <li><a class="link" href="#chefs-section">Шеф-кухарі</a></li>
-            <li><a class="link" href="#formats-section">Формати</a></li>
-            <li><a class="link" href="#contacts-section">Контакти</a></li>
-          </ul>
-        </nav>
-        <button class="button" type="button">Замовити дзвінок</button>
+        <div class="header-container">
+          <nav class="header-nav">
+            <a href="/">
+              <img src="./pictures/logo.svg" alt="Логотип сучасної пекарні" />
+            </a>
+            <ul class="header-menu">
+              <li>
+                <a class="link" href="#traditions-section">Наші традиції</a>
+              </li>
+              <li>
+                <a class="link" href="#chefs-section">Шеф-кухарі</a>
+              </li>
+              <li>
+                <a class="link" href="#formats-section">Формати</a>
+              </li>
+              <li>
+                <a class="link" href="#contacts-section">Контакти</a>
+              </li>
+            </ul>
+          </nav>
+          <button class="button" type="button">Замовити дзвінок</button>
+        </div>
       </div>
     </header>
     <main>
@@ -46,7 +54,7 @@
           </h1>
         </div>
       </section>
-      <section>
+      <section class="advantages-section">
         <div class="container">
           <h2 class="visually-hidden">Наші переваги</h2>
           <ul class="advantages-list">
@@ -58,22 +66,29 @@
       </section>
       <section class="traditions-section section" id="traditions-section">
         <div class="container">
-          <h2 class="traditions-title section-title">Новий формат традицій</h2>
-          <p class="traditions-text">
-            <span class="brand uppercase">shop bakery</span> - це пекарня, яка
-            взяла все найкраще і зберігла смак традиційної випічки та
-            натуральність інгрідієнтів
-          </p>
-          <p class="traditions-text">
-            Ми працюємо як найвідоміші мережі -
-            <span class="brand">5 хвилин і замовлення готове.</span> А ще у
-            наших пекарень стилізований дизайн та висока якість обслуговування!
-            пекарень стилізований дизайн та висока якість обслуговування!
-          </p>
-          <img
-            src="./pictures/Baker-man.jpg"
-            alt="Чоловік пекар дивиться на батони із посмішкою"
-          />
+          <div class="traditions-container">
+            <div class="traditions-content">
+              <h2 class="traditions-title section-title">
+                Новий формат традицій
+              </h2>
+              <p class="traditions-text">
+                <span class="brand uppercase">shop bakery</span> - це пекарня,
+                яка взяла все найкраще і зберігла смак традиційної випічки та
+                натуральність інгрідієнтів
+              </p>
+              <p>
+                Ми працюємо як найвідоміші мережі - <br />
+                <span class="brand">5 хвилин і замовлення готове</span>. <br />
+                А ще у наших пекарень стилізований дизайн <br />
+                та висока якість обслуговування!
+              </p>
+            </div>
+            <img
+              src="./pictures/Baker-man.jpg"
+              alt="Чоловік пекар дивиться на батони
+            із посмішкою"
+            />
+          </div>
         </div>
       </section>
       <section class="section" id="chefs-section">
@@ -110,9 +125,9 @@
       <section class="section" id="formats-section">
         <div class="container">
           <h2 class="formats-title section-title">Формати</h2>
-          <ul>
+          <ul class="formats-list">
             <li>
-              <article>
+              <article class="format-card">
                 <h3 class="format-title" lang="en">Walrus</h3>
                 <div class="format-text">
                   <p>Площа: до 120 м2</p>
@@ -126,7 +141,7 @@
               </article>
             </li>
             <li>
-              <article>
+              <article class="format-card">
                 <h3 class="format-title" lang="en">Horseshoe</h3>
                 <div class="format-text">
                   <p>Площа: до 25 м2</p>
@@ -137,7 +152,7 @@
               </article>
             </li>
             <li>
-              <article>
+              <article class="format-card">
                 <h3 class="format-title" lang="en">Handlebar</h3>
                 <div class="format-text">
                   <p>Площа: до 15 м2</p>
