внесла зміни по 9 лекції

--- a/Bakery/index.html
+++ b/Bakery/index.html
@@ -14,7 +14,7 @@
     <!-- Styles -->
     <style>
       h1 {
-        background-color: white;
+        background-color: transparent;
       }
     </style>
     <link rel="stylesheet" href="./css/styles.css" />
@@ -93,22 +93,26 @@
       </section>
       <section class="section" id="chefs-section">
         <div class="container">
-          <h2 class="chefs-title section-title">
+          <h2 class="chefs-title section-title centered">
             Наші найкращі <span class="accent">шеф-кухарі</span>
           </h2>
           <ul>
             <li>
               <article>
+                <img
+                  class="chef-photo"
+                  src="./images/Nastya.jpg"
+                  alt="Nastya"
+                />
                 <h3 class="chef-title">Настя</h3>
                 <p>Привіт, я Настя!</p>
                 <p>Вже 10 років я втілюю в життя цікаві та смачні ідеї.</p>
                 <p>Я випічу для вас найсмачніщі вироби!</p>
               </article>
             </li>
-          </ul>
-          <ul>
             <li>
               <article>
+                <img class="chef-photo" src="./images/Vlad.jpg" alt="Vlad" />
                 <h3 class="chef-title">Влад</h3>
                 <p>Привіт, я Влад!</p>
                 <p>
@@ -124,7 +128,7 @@
       </section>
       <section class="section" id="formats-section">
         <div class="container">
-          <h2 class="formats-title section-title">Формати</h2>
+          <h2 class="formats-title section-title centered">Формати</h2>
           <ul class="formats-list">
             <li>
               <article class="format-card">
@@ -182,7 +186,7 @@
         </div>
       </section>
     </main>
-    <footer>
+    <footer class="footer">
       <div class="container">
         <nav>
           <a href="#">
